--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "pytest>=8.4.2",
     "pytest-asyncio>=1.2.0",
     "pytest-env>=1.1.5",
+    "pytest-playwright>=0.7.1",
     "pytest-xdist>=3.8.0",
 ]
