updating conftest to run other browsers

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,9 @@
 [pytest]
 addopts = -sv --browser=chromium
-; addopts = -sv --alluredir=allure-results --browser=chromium --headless
+; browsers:[chromium,firefox,webkit]
+; channels for chromium:[chrome,msedge]
+
+; addopts = -sv --alluredir=allure-results --browser=chromium --headed
 env =
     DEBUG=pw:api
     PWDEBUG=0
