Adding device basic config

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,9 @@
 [pytest]
-addopts = -sv --browser=chromium
+addopts = -sv --device="Galaxy A55" --browser=chromium --channel=msedge --headed
 ; browsers:[chromium,firefox,webkit]
 ; channels for chromium:[chrome,msedge]
-
-; addopts = -sv --alluredir=allure-results --browser=chromium --headed
+; device_list=https://github.com/microsoft/playwright/blob/main/packages/playwright-core/src/server/deviceDescriptorsSource.json
+; addopts = -sv --alluredir=allure-results
 env =
     DEBUG=pw:api
     PWDEBUG=0
