Changing browsers and devices to parametrized

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,5 @@
 [pytest]
-addopts = -sv --device="Galaxy A55" --browser=chromium --channel=msedge --headed
-; browsers:[chromium,firefox,webkit]
-; channels for chromium:[chrome,msedge]
+addopts = -sv --headed
 ; device_list=https://github.com/microsoft/playwright/blob/main/packages/playwright-core/src/server/deviceDescriptorsSource.json
 ; addopts = -sv --alluredir=allure-results
 env =
