adding test paths

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,7 @@
 [pytest]
+testpaths =
+    tests
+    
 addopts = -sv --headed
 ; device_list=https://github.com/microsoft/playwright/blob/main/packages/playwright-core/src/server/deviceDescriptorsSource.json
 ; addopts = -sv --alluredir=allure-results
