feat: Adding config to run in parallel

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,7 +2,7 @@
 testpaths =
     tests
     
-addopts = -sv --headed
+addopts = -sv --headed -n  auto -v
 ; device_list=https://github.com/microsoft/playwright/blob/main/packages/playwright-core/src/server/deviceDescriptorsSource.json
 ; addopts = -sv --alluredir=allure-results
 env =
