--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,11 @@
 [pytest]
 testpaths =
-    tests
+    tests/
     
-addopts = -sv --headed -n  auto -v
+addopts = 
+    -sv 
+    --headed
+    -n auto -v
 ; device_list=https://github.com/microsoft/playwright/blob/main/packages/playwright-core/src/server/deviceDescriptorsSource.json
 ; addopts = -sv --alluredir=allure-results
 env =
